# universal-flow-game-solver

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: Dockerfile  __init__.py  acceleration.py  app.py  file_lock.py  image_utils.py
docs/: ARCHITECTURE.md  FLOW_VARIANTS_AND_ARCHITECTURE.md  PRODUCTION_READINESS.md
flow_solver/: cli.py  migration.py  preprocessing.py  puzzle.py  schema_v2.py  topologies.py  validation.py
flow_solver/solver/: __init__.py  dfs_solver.py  pysat_solver.py  types.py  validation.py  z3_solver.py
flow_solver/spaces/: circle.py  square.py
flow_solver/viz/: plotly_viz.py
frontend/: Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  colors.ts  theme.ts  (+3 more)
scripts/: backup_data.py  benchmark_solver.py  replay_image_imports.py  validate_puzzles.py
tests/: conftest.py  test_acceleration.py  test_api_schema_v2.py  test_backup_data.py  test_barrier_detection.py  test_bridge_image_import.py  test_circle_detection.py  test_circle_orientation.py  test_file_lock.py  test_graph_edge_overrides.py  test_graph_topologies.py  test_image_import_archive.py  test_image_input_invariance.py  test_reference_puzzle_images.py  test_region_api.py  test_region_topology.py  test_replay_image_imports.py  test_schema_migration.py  test_schema_v2.py  test_terminal_color_meta.py  test_topology_layouts.py  test_topology_registry.py  test_validation.py  test_warp_detection.py  test_z3_edge_solver.py
(+28 files in other folders)
